--- a/config.conf
+++ b/config.conf
@@ -4,16 +4,22 @@ end_ip:1.1.1.255
 skip_ip:1.1.1.3,1.1.1.5
 port:9999
 
+
 #local:get flag from local file
 #web:get flag from url
 #pwn:get flag from exp.py
-script_function:local
+script_function:web
 url_file:./url.txt
 flag_file:./flag.txt
-round_time:300
+round_time:10
 
 #submit_module
 submit_addr:http://172.16.99.129/flag_request.php
 token:sfjasjdoinfaiosdjfija89sfuioajsdiof
 success_request:success
 failed_request:failed
+
+
+#web_flag symbol
+flag_start:flag{
+flag_end:}
