--- a/config.conf
+++ b/config.conf
@@ -1,25 +1,28 @@
 [config]
+#ip module
 start_ip:1.1.1.2
 end_ip:1.1.1.255
 skip_ip:1.1.1.3,1.1.1.5
-port:9999
 
 
-#local:get flag from local file
-#web:get flag from url
-#pwn:get flag from exp.py
+#function_module(local & pwn & web)
 script_function:web
-url_file:./url.txt
-flag_file:./flag.txt
-round_time:10
 
 #submit_module
 submit_addr:http://172.16.99.129/flag_request.php
 token:sfjasjdoinfaiosdjfija89sfuioajsdiof
 success_request:success
 failed_request:failed
+round_time:10
 
+#local_flag module
+flag_file:./flag.txt
 
-#web_flag symbol
+#web_flag_module
+url_file:./url.txt
 flag_start:flag{
 flag_end:}
+
+
+#pwn_flag_module
+port:9999
