--- a/config.conf
+++ b/config.conf
@@ -1,28 +1,24 @@
 [config]
-#ip module
-ip_mode:"172.19.%d.30"
-start_ip:1
-end_ip:200
-skip_ip:10,25
+# ip module
+# 因为现在比赛的ip段非常乱，所以改为ip_list，这样稳定一些，需要大家手动生成ip_list
+ip_list:10.10.10.3,172.19.33.2,192.168.65.2,192.168.2.3
 
+# function_module(local & pwn & web)
+script_function:web
 
-#function_module(local & pwn & web)
-script_function:pwn
-
-#submit_module 如果使用curl提交，请到submit.py里进行修改
-submit_addr:http://10.10.10.6/env_test/www/flag_request.php
+# submit_module 如果使用curl提交，请到submit.py里进行修改(method:curl & requests)
+submit_method:requests
+submit_addr:http://192.168.65.2:8888/flag_request.php
 token:sfjasjdoinfaiosdjfija89sfuioajsdiof
+
+# success_request和failed_request是用来判断获取flag成功或错误的字符串，可根据比赛情况进行修改
 success_request:success
 failed_request:failed
-round_time:10
 
-#local_flag module
+# round_time代表每轮多少秒，rounds代表总轮次，无所谓，submit_wait为每次提交间隔时间
+round_time:600
+rounds:30
+submit_wait:3
+
+# local_flag module
 flag_file:./flag.txt
-
-#web_flag_module
-url_format:http://%s/flag_request.php
-flag_start:flag{
-flag_end:}
-
-#pwn_flag_module
-port:9999
